# agentic-web-protocol

./: README.md  README_WEB.md  pyproject.toml
playground/: example.py
playground/web/: index.html
